[package]
name = "rover-rtc"
version = "0.1.0"
edition = "2024"

[dependencies]
str0m = "0.10.0"
tokio = "1.47.1"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.143"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rand = "0.9.2"
chrono = "0.4.42"

[[bin]]
name = "rover-rtc"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
