[package]
name = "rover-rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
str0m = "0.11.1"
rouille = { version = "3.6.2", features = ["ssl"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
systemstat = "0.2.2"
serde_json = "1.0.145"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
local-ip-address = "0.6.5"
chrono = { version = "0.4.42", features = ["serde"] }
bincode = "2.0.1"
serde = "1.0.228"
